@@ -3,7 +3,10 @@
  */
 package de.xwic.cube.impl;
 
-import java.io.Serializable;
+import java.io.Externalizable;
+import java.io.IOException;
+import java.io.ObjectInput;
+import java.io.ObjectOutput;
 
 import de.xwic.cube.ICell;
 
@@ -12,11 +15,15 @@ import de.xwic.cube.ICell;
  * 
  * @author Florian Lippisch
  */
-public class Cell implements ICell, Serializable {
+public class Cell implements ICell, Externalizable {
 
 	private static final long serialVersionUID = -4297789024853482650L;
 	
 	public Double[] values;
+	
+	public Cell() {
+		
+	}
 	
 	Cell(int measureSize) {
 		values = new Double[measureSize];
@@ -47,6 +54,39 @@ public class Cell implements ICell, Serializable {
 			}
 		}
 		return true;
+	}
+
+	/* (non-Javadoc)
+	 * @see java.io.Externalizable#readExternal(java.io.ObjectInput)
+	 */
+	public void readExternal(ObjectInput in) throws IOException, ClassNotFoundException {
+		
+		int size = in.readInt();
+		values = new Double[size];
+		for (int i = 0; i < size; i++) {
+			if (in.readBoolean()) {
+				values[i] = new Double(in.readDouble());
+			} else {
+				values[i] = null;
+			}
+		}
+		
+	}
+
+	/* (non-Javadoc)
+	 * @see java.io.Externalizable#writeExternal(java.io.ObjectOutput)
+	 */
+	public void writeExternal(ObjectOutput out) throws IOException {
+		out.writeInt(values.length);
+		for (Double d : values) {
+			if (d != null) {
+				out.writeBoolean(true);
+				out.writeDouble(d);
+			} else {
+				out.writeBoolean(false);
+			}
+		}
+		
 	}
 	
 }
